fix  transition overflow issue
fix  transition overflow issue

--- a/src/assets/css/core.css
+++ b/src/assets/css/core.css
@@ -1037,3 +1037,7 @@ iframe {
   opacity: 1;
   transform: translateX(0);
 }
+
+main {
+  overflow-x: hidden;
+}
